--- a/styles/main.css
+++ b/styles/main.css
@@ -8,11 +8,11 @@ body {
 
 body::before {
   content: '';
-  background-image: url('../styles/img/Sharkbg.png');
+  background-image: linear-gradient(to bottom, rgba(0, 0, 255, 0.637), blue);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
-  opacity: 0.7; /* Set the opacity value */
+  opacity: 0.8; /* Set the opacity value */
   position: absolute;
   top: 0;
   left: 0;
@@ -211,7 +211,7 @@ nav.right-align a:hover {
 
 /* Footer styles */
 footer {
-  background-color: #344aad;
+  background-color: #3444a0;
   color: #fff;
   padding: 20px;
   text-align: center;
@@ -319,6 +319,7 @@ input[type='submit']:hover {
 
   .logo {
     margin-top: 5px;
+    max-width: 60%;
   }
 
   nav ul li {
