--- a/styles/main.css
+++ b/styles/main.css
@@ -315,6 +315,7 @@ input[type='submit']:hover {
 @media screen and (max-width: 320px) {
   .container {
     padding: 10px;
+    max-width: 280px;
   }
 
   .logo {
