--- a/styles/main.css
+++ b/styles/main.css
@@ -321,4 +321,9 @@ input[type='submit']:hover {
   .logo {
     margin-left: 10px;
   }
+
+  .post-image {
+    max-width: 100%;
+    height: auto;
+  }
 }
