--- a/styles/main.css
+++ b/styles/main.css
@@ -102,11 +102,12 @@ nav ul {
 }
 
 nav ul li {
-  display: inline;
+  display: block;
   margin-right: 10px;
 }
 
 nav ul li a {
+  display: block;
   color: #f7f7f7;
   text-decoration: none;
 }
