--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,6 @@ body::before {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
-  opacity: 0.8; /* Set the opacity value */
   position: absolute;
   top: 0;
   left: 0;
@@ -79,8 +78,8 @@ code {
 
 /* Header styles */
 header {
-  background-color: #3444a0;
-  color: #fff;
+  background-color: #0f1c35;
+  color: #b30000;
   padding: 10px;
   margin: 0;
   align-items: center;
@@ -123,34 +122,36 @@ nav.right-align li:last-child {
 
 nav.right-align a {
   text-decoration: none;
-  color: #e6e6e6;
+  color: #b30000;
   font-size: 20px; /* Adjust this value to increase or decrease the text size */
 }
 
 nav.right-align a:hover {
-  color: rgb(0, 0, 0); /* Apply hover color */
+  color: rgb(255, 0, 0); /* Apply hover color */
 }
 
 /* Blog post styles */
 #blog-post {
   /*id class*/
   margin-bottom: 20px;
+  padding: 20px;
 }
 
 .post-title {
-  color: #ffffff;
   margin: 20px auto;
   text-align: center;
   font-size: 50px; /**adjust the text size*/
   font-family: 'Pacifico', cursive;
   text-transform: uppercase; /*testing*/
-  text-shadow: 2px, 2px 4px rgba(0, 0, 0, 0.5);
+  color: #b30000;
 }
 
 .post-meta {
-  color: #fafafa;
+  color: #f2f5f7;
   margin: 0 auto 10px;
   text-align: center;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .post-image {
@@ -167,7 +168,7 @@ nav.right-align a:hover {
   padding-left: 0;
   font-size: 30px;
   list-style: none; /*none removes bulletpoints*/
-  color: #ffffff;
+  color: #000000;
   font-family: 'Pacifico', cursive;
   text-shadow: 0 0 4px #000000, 0 0 8px #000000;
 }
@@ -181,17 +182,18 @@ nav.right-align a:hover {
   width: 400px;
   padding: 10px;
   text-decoration: none;
-  background-color: #3444a0;
-  color: #ffffff;
+  background: linear-gradient(to right, #0f1c35, #0f1c35);
+  color: #f2f5f7;
   border-radius: 5px;
   margin: 0 auto;
   transition: background-color 0.3s ease;
   position: relative;
+  box-shadow: #000;
 }
 
 #unlisted li a:hover {
   background-color: #ffffff;
-  color: #3444a0;
+  color: #b30000;
 }
 
 #unlisted li a::after {
@@ -208,11 +210,10 @@ nav.right-align a:hover {
   margin: 20px auto; /* assign margin with a 20px auto limit*/
   display: block; /* assign specific position and layout to this class*/
   font-size: 30px; /* size of text */
-  color: rgb(0, 0, 0); /* color of text */
+  color: #f2f5f7; /* color of text */
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase; /* assign uppercase to this class */
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5),
-    -2px -2px 4px rgba(255, 255, 255, 0.5);
+  text-shadow: 2px 2px 4px rgba(1, 1, 1, 2), -2px -2px 4px rgba(0, 0, 0, 2);
 }
 
 #my-paragraph strong {
@@ -224,7 +225,7 @@ nav.right-align a:hover {
   text-align: center; /* align text to center of page */
   margin: 20px auto; /* assign margin with a 20px auto limit */
   font-size: 25px; /* size of text */
-  color: #ffffff; /* color of text */
+  color: #f2f5f7; /* color of text */
   font-family: 'Open Sans', sans-serif;
   text-shadow: 0 0 4px rgba(0, 0, 0, 1), 0 0 8px rgba(0, 0, 0, 1),
     0 0 12px rgba(0, 0, 0, 1);
@@ -237,7 +238,7 @@ nav.right-align a:hover {
 
 /* Footer styles */
 footer {
-  background-color: #3444a0;
+  background-color: #0f1c35;
   color: #fff;
   padding: 20px;
   text-align: center;
