--- a/styles/main.css
+++ b/styles/main.css
@@ -143,7 +143,8 @@ nav.right-align a:hover {
   font-size: 50px; /**adjust the text size*/
   font-family: 'Pacifico', cursive;
   text-transform: uppercase; /*testing*/
-  color: #b30000;
+  color: #000;
+  text-shadow: 0px 0px 4px rgba(139, 0, 0, 1), -0px -0px 4px rgba(139, 0, 0, 1);
 }
 
 .post-meta {
@@ -151,7 +152,7 @@ nav.right-align a:hover {
   margin: 0 auto 10px;
   text-align: center;
   font-weight: bold;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  text-shadow: 0px 0px 4px rgba(139, 0, 0, 1), -0px -0px 4px rgba(139, 0, 0, 1);
 }
 
 .post-image {
@@ -159,6 +160,19 @@ nav.right-align a:hover {
   height: auto;
   margin: 0 auto 10px;
   display: block;
+}
+
+/* link color styles*/
+.linkColor {
+  color: #b30000;
+}
+
+.linkColor:hover {
+  color: #f2f5f7;
+}
+
+.linkColor:active {
+  color: #0f1c35;
 }
 
 #unlisted {
@@ -207,13 +221,14 @@ nav.right-align a:hover {
 #my-paragraph {
   width: 70%; /* Adjust the width as desired */
   text-align: center; /* align text to center of the page*/
-  margin: 20px auto; /* assign margin with a 20px auto limit*/
+  margin: 10px auto; /* assign margin with a 20px auto limit*/
   display: block; /* assign specific position and layout to this class*/
   font-size: 30px; /* size of text */
-  color: #f2f5f7; /* color of text */
+  color: #0f1c35; /* color of text */
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase; /* assign uppercase to this class */
-  text-shadow: 2px 2px 4px rgba(1, 1, 1, 2), -2px -2px 4px rgba(0, 0, 0, 2);
+  text-shadow: 0px 0px 4px rgba(255, 255, 255, 1),
+    -0px -0px 4px rgba(255, 255, 255, 1);
 }
 
 #my-paragraph strong {
@@ -227,8 +242,7 @@ nav.right-align a:hover {
   font-size: 25px; /* size of text */
   color: #f2f5f7; /* color of text */
   font-family: 'Open Sans', sans-serif;
-  text-shadow: 0 0 4px rgba(0, 0, 0, 1), 0 0 8px rgba(0, 0, 0, 1),
-    0 0 12px rgba(0, 0, 0, 1);
+  text-shadow: 0px 0px 6px rgba(139, 0, 0, 1), -0px -0px 4px rgba(139, 0, 0, 1);
 }
 
 .paragraph2 code {
